tests/expressions/type_error/and.shelltest
// generated by `etc/generate_operator_test.py type_error and`
